--- a/style.css
+++ b/style.css
@@ -1,27 +1,52 @@
 body {
     background-color: #095515;
+    background-image: linear-gradient(to bottom, #FFFFFF, #00FF00);
     color: red;
     font-family: Verdana, Arial, sans-serif;
 }
 
+main {
+    padding: 100px;
+    text-align: center;
+}
+
 h1 {
+    background-color: #000000;
+    border-radius: 25px;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    margin-top: 100px;
+    opacity: 0.6;
+    padding: 200px;
+    padding-bottom: 25px;
+    padding-top: 25px;
+    text-shadow: 2px 2px white;
 }
 
 h2 {
     color: green;
-    text-transform: uppercase;
     font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
+    margin-top: 100px;
+    text-transform: uppercase;
 }
 
 h3 {
+    background-color: #000000;
     font-family: "Arial Narrow", Arial, sans-serif;
+    margin-top: 100px;
+    opacity: 0.6;
+    box-shadow: 0px 5px 5px;
+}
+
+h4 {
+    margin-top: 100px;
 }
 
 div {
     background-color: lightYellow;
+    background-image: url(backgroundelementimage.jpg);
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
     color: red;
-    background-image: url(backgroundimage.jpg);
 }
 
 footer {
@@ -35,6 +60,7 @@ a {
     text-decoration: none;
 }
 
-ol {
-    list-style-type: circle;
+ul {
+    list-style-position: inside;
+    list-style-type: square;
 }
