--- a/style.css
+++ b/style.css
@@ -1,87 +1,105 @@
-body {
-    background-color: #095515;
-    background-image: linear-gradient(to bottom, #FFFFFF, #00FF00);
-    color: red;
-    font-family: Verdana, Arial, sans-serif;
-}
-
-main {
-    padding: 100px;
-    text-align: center;
-    margin: 100px;
-    margin-top: 100px;
-    margin-bottom: 30px;
-}
-
-h1 {
-    background-color: #000000;
-    border-radius: 25px;
-    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-    margin-top: 100px;
-    opacity: 0.6;
-    padding: 200px;
-    padding-bottom: 25px;
-    padding-top: 25px;
-    text-shadow: 2px 2px white;
-}
-
-h2 {
-    color: green;
-    font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
-    margin-top: 100px;
-    text-transform: uppercase;
-    margin-bottom: 60px;
-}
-
-h3 {
-    background-color: #000000;
-    font-family: "Arial Narrow", Arial, sans-serif;
-    margin-top: 100px;
-    opacity: 0.6;
-    box-shadow: 0px 5px 5px;
-}
-
-h4 {
-    margin-top: 100px;
-}
-
-
-div {
-    background-color: lightyellow;
-    background-image: url(backgroundelementimage.jpg);
-    background-repeat: no-repeat;
-    background-size: 50% 100%;
-    color: red;
-}
-
-footer {
-    font-size: 75%;
-    font-style: italic;
-    margin-top: 10px;
-}
-
-a {
-    font-size: 150%;
-    font-style: oblique;
-    text-decoration: none;
-}
-
-ul {
-    list-style-position: inside;
-    list-style-type: square;
-}
-
-img {
-    float: right;
-    margin: 0 0 10px 10px;
-}
-
-.header {
-    position: fixed;
-    left: 10px;
-    height: 10px;
-    top: -10px;
-    z-index: -1;
-    margin-bottom: 60px;
-}
-
+    body {
+        background-color: #095515;
+        background-image: linear-gradient(to bottom, #FFFFFF, #00FF00);
+        color: red;
+        font-family: Verdana, Arial, sans-serif;
+    }
+    
+    main {
+        padding: 100px;
+        text-align: center;
+        margin: 100px;
+        margin-top: 100px;
+        margin-bottom: 30px;
+    }
+    
+    h1 {
+        background-color: #000000;
+        border-radius: 25px;
+        font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+        margin-top: 100px;
+        opacity: 0.6;
+        padding: 200px;
+        padding-bottom: 25px;
+        padding-top: 25px;
+        text-shadow: 2px 2px white;
+    }
+    
+    h2 {
+        color: green;
+        font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
+        margin-top: 100px;
+        text-transform: uppercase;
+        margin-bottom: 60px;
+    }
+    
+    h3 {
+        background-color: #000000;
+        font-family: "Arial Narrow", Arial, sans-serif;
+        margin-top: 100px;
+        opacity: 0.6;
+        box-shadow: 5px 5px;
+    }
+    
+    h4 {
+        margin-top: 100px;
+    }
+    
+    div {
+        background-color: lightyellow;
+        background-image: url(backgroundelementimage.jpg);
+        background-repeat: no-repeat;
+        background-size: 50% 100%;
+        color: red;
+    }
+    
+    footer {
+        font-size: 75%;
+        font-style: italic;
+        margin-top: 10px;
+    }
+    
+    a {
+        font-size: 150%;
+        font-style: oblique;
+        text-decoration: none;
+        list-style-type: none;
+    }
+    
+    ul {
+        list-style-position: inside;
+        list-style-type: none;
+    }
+    
+    img {
+        float: right;
+        margin: 0 0 10px 10px;
+    }
+    
+    .header {
+        position: fixed;
+        left: 10px;
+        height: 10px;
+        top: -10px;
+        z-index: -1;
+        margin-bottom: 60px;
+    }
+    
+    nav a {
+        text-decoration: none;
+        font-size: 150%;
+    }
+    
+    a:link {
+        color: brown;
+    }
+    
+    a:visited {
+        color: orange;
+    }
+    
+    @media only screen and (min-device-width: 480px) {}
+    
+    @media only screen and (min-device-width: 768px) {}
+    
+    @media only screen and (min-device-width: 1024px) {}
